localization/v2.1.x/site/pt/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Welcome to Milvus Docs!
</h1></p>
<p><h2 class="sub-title">
Here you will learn about what Milvus is, and how to install, use, and deploy Milvus to build an application according to your business need.
</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Try Managed Milvus For Free!</h2>
    <p class="promotion-desc">Try Zilliz Cloud for free! The easiest way to experience Milvus!</p>
  </div>
  <div class="cta-wrapper">
    <a class="cta-global" href="https://cloud.zilliz.com/signup">Zilliz Cloud</a>
    <a class="cta-cn" href="https://cloud.zilliz.com.cn/signup">Zilliz Cloud China</a>
  </div>
</div>
<h2 id="Get-Started" class="common-anchor-header">Get Started<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  <a href="/docs/pt/install_standalone-docker.md">
    <img translate="no"  src="/docs/v2.1.x/assets/home_install.svg" alt="icon" />
    <p class="link-btn">Install Milvus <i class="fas fa-chevron-right"></i></p>
  </a>
  <p>Learn how to install Milvus using either Docker Compose or on Kubernetes.</p>
</div>
<div class="start_card_container">
  <a href="/docs/pt/example_code.md">
    <img translate="no"  src="/docs/v2.1.x/assets/home_quick_start.svg" alt="icon" />
    <p class="link-btn">Quick Start <i class="fas fa-chevron-right"></i></p>
  </a>
  <p>Learn how to quickly run Milvus with sample code.</p>
</div>
<div class="start_card_container">
  <a href="/bootcamp">
    <img translate="no"  src="/docs/v2.1.x/assets/home_bootcamp.svg" alt="icon" />
    <p class="link-btn">Bootcamp <i class="fas fa-chevron-right"></i></p>
  </a>
  <p>
  Learn how to build vector similarity search applications with Milvus.
  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">Recommended articles<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>Use</p>
<ul>
<li><a href="/docs/pt/create_collection.md">Create a Collection</a></li>
<li><a href="/docs/pt/insert_data.md">Manage Data</a></li>
<li><a href="/docs/pt/build_index.md">Build an Index</a></li>
<li><a href="/docs/pt/search.md">Search</a></li>
<li><a href="/docs/pt/query.md">Query</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Deploy</p>
<ul>
<li><a href="/docs/pt/configure-docker.md">Configure Milvus</a></li>
<li><a href="/docs/pt/deploy_s3.md">Manage Dependencies</a></li>
<li><a href="/docs/pt/aws.md">Deploy on Clouds</a></li>
<li><a href="/docs/pt/scaleout.md">Scale a Milvus Cluster</a></li>
<li><a href="/docs/pt/monitor_overview.md">Monitor and Alert</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Learn</p>
<ul>
<li><a href="/docs/pt/system_configuration.md">System Configuration</a></li>
<li><a href="/docs/pt/architecture_overview.md">Architecture Overview</a></li>
<li><a href="/docs/pt/index.md">Vector Index</a></li>
<li><a href="/docs/pt/metric.md">Similarity Metrics</a></li>
<li><a href="/docs/pt/glossary.md">Glossary</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">What’s new in docs<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>Nov 2022 - Milvus 2.2.0 release</em></p>
<ul>
<li>Added guidance on how to <a href="/docs/pt/bulk_insert.md">bulk insert entities from files</a>.</li>
<li>Added description of <a href="/docs/pt/disk_index.md">disk-based ANN index</a>.</li>
<li>Added guidance on how to configure <a href="/docs/pt/configure_quota_limits.md">quotas_and_limits</a>.</li>
<li>Added guidance on how to <a href="/docs/pt/rbac.md">enable RBAC</a> with Milvus Operator.</li>
<li>Added guidance on how to <a href="/docs/pt/upgrade_milvus_cluster-helm.md">migrate metadata</a> from 2.1.x to 2.2.0</li>
</ul>
</div>
